Fix issue with wide and fullwide on mobile.

--- a/edit-post/components/visual-editor/style.scss
+++ b/edit-post/components/visual-editor/style.scss
@@ -34,6 +34,13 @@
 			margin-left: -$block-side-ui-padding;
 			margin-right: -$block-side-ui-padding;
 		}
+
+		&[data-align="full"] .editor-block-contextual-toolbar,
+		&[data-align="wide"] .editor-block-contextual-toolbar {
+			max-width: $content-width + 2;	// 1px border left and right
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 
 	&[data-align="wide"] {
@@ -42,17 +49,6 @@
 
 	&[data-align="full"] {
 		max-width: none;
-	}
-
-	&[data-align="full"],
-	&[data-align="wide"] {
-		.editor-block-contextual-toolbar {
-			@include break-small() {
-				max-width: $content-width + 2;	// 1px border left and right
-			}
-			margin-left: auto;
-			margin-right: auto;
-		}
 	}
 }
 
